# trip_planner

./: README.md  package-lock.json  package.json
.github/workflows/: main_smart-trip-planner-api.yml
api/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
api/src/: app.py
api/src/controllers/: trips.py
api/src/models/: prompt.py
api/src/routes/: api.py  ping.py  trips.py
api/src/utils/: cache.py  context.py  db.py  history.py  logger.py  tools.py  validator.py
api/tests/controllers/: test_trips.py
client/: README.md  package-lock.json  package.json
client/.github/workflows/: azure-static-web-apps-agreeable-pebble-03d0b0903.yml
client/public/: index.html
client/src/: App.css  App.test.tsx  App.tsx  History.tsx  index.tsx
client/src/api/: connector.tsx
client/src/components/: Background.tsx  ChatBox.tsx  History.tsx  Layout.tsx  NavigationBar.tsx  NewTrip.tsx  RecentTrips.tsx  textarea.tsx
client/src/core/: hooks.ts  store.ts
client/src/features/: Cookies.tsx
client/src/features/chat/: chatAPI.ts  chatSlice.ts
client/src/types/: global.types.ts
